# comfyui-andypack

./: .mcp.json  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
andypack/: __init__.py  _spike_loop.py  api.py  atlas.py  images.py  io.py  manifest.py  manikins.py  nodes.py  resolve.py  server.py  sprites.py
docs/: andypack-improvements-review-2026-06-30.md  anim-coord-node-spec.md  animation-manifest-guide.md  manifest-schema.md  prompting-guide.md
docs/superpowers/notes/: 2026-07-01-loop-spike-findings.md
docs/superpowers/plans/: 2026-06-29-animation-nodes.md  2026-06-29-cascading-resolver-core.md  2026-06-29-pose-nodes.md  2026-06-29-server-routes.md  2026-06-29-web-extension.md  2026-06-30-character-creator-node.md  2026-06-30-character-pipeline-overhaul.md  2026-06-30-game-asset-nodes.md  2026-07-01-pipeline-sweep-loops.md  2026-07-02-asset-pipeline-gaps.md  2026-07-02-character-loader-node.md  2026-07-02-sybp-workflow-set.md
docs/superpowers/specs/: 2026-06-29-cascading-pose-resolver-design.md  2026-06-29-identity-prompt-variable-design.md  2026-06-30-character-creator-node-design.md  2026-06-30-game-asset-nodes-design.md  2026-06-30-game-character-sprite-pipeline-design.md  2026-07-01-pipeline-sweep-loops-design.md  2026-07-02-character-loader-node-design.md  2026-07-02-sybp-workflow-set-design.md
examples/: animations.json
examples/workflows/: 1a_character_create.json  1b_turnaround_batch.json  2_animate_fflf.json  3_sprite_export.json  README.md  sprite_export.json  turnaround.json
scripts/: build_seed_manifest.py
tests/: conftest.py  test_acceptance.py  test_alpha.py  test_anchors.py  test_animation_writeback.py  test_api.py  test_atlas.py  test_completeness.py  test_fixes.py  test_images.py  test_io.py  test_manifest.py  test_manikins.py  test_merge.py  test_nodes.py  test_palette.py  test_playback.py  test_pose_writeback.py  test_provenance.py  test_resolve.py  test_seed.py  test_server.py  test_sprites.py  test_staleness.py
tests/fixtures/: manifest.json
tests/fixtures/idle_root/Cortex/fighting_stance_idle/E/: meta.json
web/: anim_coord.js  anim_coord_panel.js
