[project]
name = "comfyui-andypack"
version = "0.1.0"
description = "ComfyUI Animation Coordinator — dependency-aware FFLF resolver."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# The repo root has an __init__.py (ComfyUI custom-node entry point), which would
# otherwise make mypy treat the hyphenated repo dir as a package. Pin the package
# base so `mypy andypack` resolves `andypack` as a top-level package.
explicit_package_bases = true
mypy_path = "."
