[project]
name = "comfyui-andypack"
version = "0.1.0"
description = "ComfyUI Animation Coordinator — dependency-aware FFLF resolver."
authors = [{ name = "Andy Hite", email = "andy@andyhite.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["comfyui", "animation", "fflf", "wan", "flux", "sprite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: ComfyUI",
  "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/andyhite/comfyui-andypack"

# ComfyUI Registry metadata (https://docs.comfy.org/registry/overview).
[tool.comfy]
PublisherId = "andyhite"
DisplayName = "Animation Coordinator (andypack)"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"

[tool.mypy]
# No python_version pin: mypy targets the running interpreter, so it parses the
# installed stdlib/3rd-party stubs (which may use newer syntax under 3.12) rather
# than rejecting them against an older target.
ignore_missing_imports = true
# The repo root has an __init__.py (ComfyUI custom-node entry point), which would
# otherwise make mypy treat the hyphenated repo dir as a package. Pin the package
# base so `mypy andypack` resolves `andypack` as a top-level package.
explicit_package_bases = true
mypy_path = "."
